<resources>
    <string name="app_name">FitnessApp</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_QR">QR</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>

    <string name="search">Search</string>
    <string name="ads">Ads / Promotions</string>
    <string name="activities">My Activities:</string>

    <string name="date">Day/Month/Year</string>
    <string name="details">Datetime + details</string>
    <string name="confirmQuestion">Confirm tentative attendance?</string>
    <string name="confirm">Confirm</string>


    <string name="lang">Language: 🇺🇸</string>
    <string name="check_bg">Enable random backgrounds</string>
    <string name="adorno">Test checkbox</string>
    <string name="cam_stats">Show camera info in QR</string>
    <string name="cam_select">Camera used for QR: </string>

    <string name="hola">Hi</string>
    <string name="chau">Bye</string>
    <string name="test">Test button</string>

    <string name="test_camera">Test camera</string>
    <string name="scanQR">Scan QR</string>

    <string name="permissionTitle">Please give us permission</string>
    <string name="permissionGranted">Permission granted</string>
    <string name="permissionBlocked">Permission blocked</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dialog_start_game">"Are you sure you want to book class: %s1 on %s2 ?"</string>
    <string name="accept_gym">"Book"</string>
    <string name="class_successfully_booked">"Class successfully booked"</string>
    <string name="class_book_error">"Couldn't book class, please try again"</string>
    <string name="gym_not_exist">"Gym does not exist"</string>
    <string name="cancel">"Cancel"</string>

    <string name="gymAvatar">Miniature image of the gym</string>
    <string name="searchbarHint">Search</string>
    <string name="searchButtonDesc">Search button</string>

    <string name="gymDistancePlaceholder">Distance:</string>
    <string name="meterUnitDescription">meters</string>
    <string name="kilometerUnitDescription">km</string>

    <string name="schedule">From %s to %s</string>
</resources>
