<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/title_QR" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>