<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_qr"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.qr.QRFragment"
        android:label="@string/title_QR"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/classesFragment"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.classes.ClassesFragment"
        android:label="Classes"
        tools:layout="@layout/fragment_classes">
        <argument
            android:name="gym"
            app:argType="ar.utn.frba.mobile.fitnessapp.model.Gym" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="ar.utn.frba.mobile.fitnessapp.ui.details.DetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/action_detailsFragment_to_classesFragment"
            app:destination="@id/classesFragment" />
        <argument
            android:name="gym"
            app:argType="ar.utn.frba.mobile.fitnessapp.model.Gym" />
    </fragment>
</navigation>